# remun

./: .gitignore  Cargo.toml  README.md  flake.nix  license-info.txt  nes-description.md  run.sh  shell.nix
asm/: simple.asm
asmexamples/: simple.asm
asmnes/: Cargo.toml  bin.rs  lexer.rs  lib.rs  old.rs  parser.rs
asmnes/tests/: simple.rs
inesasm/: Cargo.toml
inesasm/src/: main.rs
macros/: Cargo.toml
macros/src/: lib.rs  table.txt
nes_primitives/: Cargo.toml
nes_primitives/src/: lib.rs  main.rs
remun-bevy/: Cargo.toml
remun-bevy/src/: main.rs
remunapp/: Cargo.toml  app.rs  main.rs  nes_graphics.rs  shader.wgsl  visualizer.rs
remunapp/visualizer/: debugger.rs  hex_editor.rs  mod.rs
shared/: Cargo.toml  lib.rs
src/: addressing_modes.rs  app.rs  bus.rs  cpu.rs  instructions.rs  lib.rs  main.rs  memory.rs  opcodes.rs  parser.rs  ram.rs  visualizer.rs
src/nes/: mod.rs
tests/: general.rs
