[package]
name = "remun"
version = "0.1.0"
edition = "2024"

[dependencies]
asmnes = { workspace = true }
shared = { workspace = true }
eframe = { version = "0.31" }
egui_extras = { version = "0.31", features = ["default", "image"] }
pretty_env_logger = "0.4"
log = "0.4"
rfd = "0.15.3"

[workspace]
members = [ "asmnes", "shared" ]

[workspace.dependencies]
strum = "0.26"
strum_macros = "0.26"

shared = { path = "shared" }
asmnes = { path = "asmnes" }

