[package]
name = "remun"
version = "0.1.0"
edition = "2024"

[dependencies]
asmnes = { workspace = true }
shared = { workspace = true }
log = { workspace = true }

[workspace]
members = [ "asmnes", "remunapp", "shared" ]

[workspace.dependencies]
strum = "0.26"
strum_macros = "0.26"
#eframe = { version = "0.31" }
egui = "0.31"
egui_extras = { version = "0.31", features = ["default", "image"] }
egui_wgpu_backend = "0.34"
egui_winit_platform = "0.26"
pretty_env_logger = "0.4"
log = "0.4"
rfd = "0.15.3"
winit = "0.30"
wgpu = "24.0"
pollster = "*"
bytemuck = { version = "1.22", features = [ "derive" ] }
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

shared = { path = "shared" }
asmnes = { path = "asmnes" }
remunapp = { path = "remunapp" }
remun = { path = "./" }

